fix(Test): Fix start_link/2 flakey test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,11 @@ jobs:
     - name: Compile source
       run: mix compile
 
+    - name: Compile source (prod)
+      run: mix compile
+      env:
+        MIX_ENV: prod
+
     - name: Check code quality
       run: mix credo
 
