chore(CI/CD): Update elixir build versions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,8 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        elixir-version: ['1.9', '1.10']
-        otp-version: ['22.2']
+        elixir-version: ['1.8', '1.9', '1.10']
+        otp-version: ['20', '21', '22']
 
     steps:
     - uses: actions/checkout@v2
