--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -38,7 +38,7 @@ jobs:
       run: mix credo
 
     - name: Run Tests
-      run: mix test
+      run: mix test --trace
 
     - name: Build package
       run: mix hex.build
